Standardize modern sample output and documentation